# Ijon

./: .env.example  .gitignore  CLAUDE.md  INITIAL.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  README.md  SYSTEM_STATUS.md  TASK.md  TESTING_COMPLETE.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TEST_RESULTS.md  add_books_view.py  add_enhanced_metadata.py  add_rag_chunks.py  analyze_qa_quality.py  batch_ksiazki_processor.py  check_setup.py  clean_neon_database.py  clean_neon_force.py  cli_simple.py  create_real_pdf.py  daily_qa_quality_report_20250704.json  debug_enhancers.py  debug_model_routing.py  demo_simple.py  demo_validation_workflow.py  demo_with_apis.py  enhanced_ksiazki_processor.py  enhanced_mental_models_processor.py  enhanced_mental_models_progress.json  improved_qa_generator.py  initialize_system.py  mcp_client_config.json  monitor_ksiazki_progress.py  process_and_query.py  process_mental_models.py  pyproject.toml  qa_assessment_dashboard.py  (+59 more)
PRPs/: pdf_rag_system.md  quality_extraction_system.md  quality_extraction_system_v2.md
demo_results/: api_demo_20250703_181805.json  sample_query_result.json
docs/: 12factor_benefits.md  12factor_complete_implementation.md  12factor_implementation_summary.md  12factor_refactoring_plan.md  API_GUIDE.md  ARCHITECTURE.md  CONTEXT_ENGINEERING_PHILOSOPHY.md  DATABASE_SETUP_COMPLETE.md  DEVELOPMENT.md  EVALUATION_ARCHITECTURE.md  MIGRATION_GUIDE.md  SYSTEM_ARCHITECTURE.md  agentic_rag_enhancements_final_summary.md  enhanced_prompt_patterns.md  getting_started_cognitive_rag.md  google_drive_setup.md  hyde_usage_guide.md  knowledge_distillation_prompts.md  migration_to_cognitive_rag.md  phase2_cognitive_agents_summary.md  phase3_self_correction_summary.md  project_completion_report.md  prompt_enhancement_summary.md  v2_system_overview.md  v2_testing_summary.md
examples/: Phase 3 n-interactions json v1.txt  Phase 4 part 1.txt  cognitive_rag_demo.py
extraction/: __init__.py  evaluator.py  models.py  pdf_processor.py  run_baseline_evaluation.py  run_baseline_evaluation_auto.py  run_baseline_quick_test.py  test_single_pdf.py
extraction/analysis/: model_comparison.md
extraction/baseline/: __init__.py  extractor.py  extractor_enhanced.py  test_baseline.py
extraction/document_aware/: __init__.py  extractor.py  extractor_enhanced.py
extraction/evaluation/: stage1_summary_report.md
extraction/quality/: __init__.py  feedback_extractor.py  feedback_extractor_enhanced.py  scorer.py
extraction/strategies/: __init__.py  academic_strategy.py  base_strategy.py  document_profiler.py  narrative_strategy.py  strategy_factory.py  technical_strategy.py
extraction/testing/: ab_test_framework.py
extraction/v2/: __init__.py  agent_educator.py  dashboard_ui.py  enhancers.py  enhancers_enhanced.py  error_handling.py  extractors.py  extractors_enhanced.py  human_contact.py  knowledge_service.py  mcp_dashboard_tools.py  mcp_server.py  neon_storage.py  pipeline.py  state.py  terminal_monitor.py  triggers.py  validation_ui.py
ksiazki_pdf/: README.md
sample_pdfs/: README.txt  contract_law.txt  medical_handbook.txt  ml_textbook.txt
scripts/: run_monitoring.py
src/: cli.py  config.py  models.py
test_documents/: README.md  academic_paper_metadata.json  business_book_metadata.json  create_sample_pdfs.py  historical_text_metadata.json  prepare_test_pdfs.py  technical_manual_metadata.json  tutorial_guide_metadata.json
test_results/: connection_test_20250703_181543.json  full_test_20250703_183246.json  stage2_validation_report.md  stage3_validation_report.md
tests/: conftest.py.bak  create_test_data.py  test_config.py  test_enhanced_prompts_demo.py  test_enhancer_composition.py  test_evaluation.py  test_model_routing.py  test_pdf_processing.py  test_pinecone_adapter.py  test_runner.py
utils/: __init__.py  generate_sample_pdfs.py  generate_simple_pdfs.py
(+61 files in other folders)
